kubernetes/operationcode_frontend/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: operationcode-frontend
  namespace: operationcode-staging
spec:
  rules:
  - host: staging.operationcode.org
    http:
      paths:
      - backend:
          serviceName: operationcode-frontend-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - staging.operationcode.org
    secretName: operationcode-frontend-tls
